# ek-portfolio-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.claude/: settings.local.json
app/: config.py  main.py  prompt.py
app/api/: chat.py  history.py
app/knowledge/: achievements.md  bio.md  experience_epsilon.md  experience_forgeai.md  experience_yeedu.md  projects_personal.md  skills.md
app/rag/: embedder.py  generator.py  retriever.py
