[project]
name = "ek-portfolio-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.38.0",
    "pydantic-settings>=2.0.0",
    "sentence-transformers>=5.5.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.47.0",
]
